--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,12 @@
 * {
     margin: 0;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
+}
+
+body {
+    /* background-image: url("../img/mcl60_wallpaper_3840x2160.jpg"); */
+    height: 100vh;
+    background-size: cover;
 }
 
 #header-menu {
@@ -28,7 +35,7 @@
 }
 
 .header-item {
-    margin: 5px;
+    margin: 10px;
     display: flex;
     align-items: center;
 }
