Header almost finished, added cards

--- a/view/F1Store/index.html
+++ b/view/F1Store/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Furniture</title>
     <link rel="stylesheet" href="../css/furniture.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -23,9 +26,11 @@
         </nav>
         <section id="header-section">
             <div id="header-section-description">
-                <h1><span id="Red">Velocidade</span><span id="Bull">Paixão</span><span id="Racing">Estilo</span></h1>
-                <h2> A loja definitiva para quem vive a emoção da Fórmula 1 e a ousadia da Red Bull Racing</h2>
-
+                <div>
+                    <h1><span id="Red">Descubra o Estilo</span><br><span id="Bull">Sinta a Paixão</span><br><span id="Racing">Viva a Velocidade</span></h1>
+                    <h5>Cada produto reflete o espírito de alta performance, dedicação e entusiasmo que fazem da Red Bull Racing uma lenda nas pistas.</h5>
+                </div>
+                <a href="#store">Acelerar</a>
             </div>
             <div id="header-section-models">
                 <img id="model-1" src="../../img/2408-clp-rbr-cat-4x-XXXL-1-removebg.png" alt="red bull racing shirt models">
@@ -33,10 +38,71 @@
         </section>
     </header>
     <main>
-        <h1> Teste </h1>
+        <section id="categories">
+            <a href="">Roupas &nbsp;<i class="fa-solid fa-shirt"></i></a>
+            <a href="">Calçados &nbsp;<i class="fa-solid fa-shoe-prints"></i></a>
+            <a href="">Acessórios &nbsp;<i class="fa-solid fa-headphones"></i></a>
+            <a href="">Quadros &nbsp;<i class="fa-solid fa-chalkboard"></i></a>
+        </section>
+
+        <section id="discounts-text">
+            <i class="fa-solid fa-clock" style="color: #ffffff; margin-left: 15px;"></i> <h4 id=""> &nbsp; OFERTAS RELÂMPAGO </h4>
+        </section>
+
+        <section id="discounts-products">
+            <div class="product-card">
+                <img class="product-img" src="../../img/shirt.webp">
+                <div class="discount">
+                    <span class="span-discount">-33% OFF</span>
+                </div>
+                <div class="card-body">
+                    <span class="product-name">Camiseta Red Bull Racing Preta</span>
+                    <del>R$199,90</del><br>
+                    <span class="product-discount-price">R$99,00</span>
+                    <span class="price-options">Ou 5x de R$24,99</span>
+                </div>
+            </div>
+            <div class="product-card">
+                <img class="product-img" src="../../img/shirt.webp">
+                <div class="discount">
+                    <span class="span-discount">-33% OFF</span>
+                </div>
+                <div class="card-body">
+                    <span class="product-name">Camiseta Red Bull Racing Preta</span>
+                    <del>R$199,90</del><br>
+                    <span class="product-discount-price">R$99,00</span>
+                    <span class="price-options">Ou 5x de R$24,99</span>
+                </div>
+            </div>
+            <div class="product-card">
+                <img class="product-img" src="../../img/shirt.webp">
+                <div class="discount">
+                    <span class="span-discount">-33% OFF</span>
+                </div>
+                <div class="card-body">
+                    <span class="product-name">Camiseta Red Bull Racing Preta</span>
+                    <del>R$199,90</del><br>
+                    <span class="product-discount-price">R$99,00</span>
+                    <span class="price-options">Ou 5x de R$24,99</span>
+                </div>
+            </div>
+            <div class="product-card">
+                <img class="product-img" src="../../img/shirt.webp">
+                <div class="discount">
+                    <span class="span-discount">-33% OFF</span>
+                </div>
+                <div class="card-body">
+                    <span class="product-name">Camiseta Red Bull Racing Preta</span>
+                    <del>R$199,90</del><br>
+                    <span class="product-discount-price">R$99,00</span>
+                    <span class="price-options">Ou 5x de R$24,99</span>
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
 
     </footer>
+    <script src="https://kit.fontawesome.com/15c8bda6b4.js" crossorigin="anonymous"></script>
 </body>
 </html>
