main and footer

--- a/view/F1Store/index.html
+++ b/view/F1Store/index.html
@@ -30,14 +30,14 @@
                     <h1><span id="Red">Descubra o Estilo</span><br><span id="Bull">Sinta a Paixão</span><br><span id="Racing">Viva a Velocidade</span></h1>
                     <h5>Cada produto reflete o espírito de alta performance, dedicação e entusiasmo que fazem da Red Bull Racing uma lenda nas pistas.</h5>
                 </div>
-                <a href="#store">Acelerar</a>
+                <a href="#main">Acelerar</a>
             </div>
             <div id="header-section-models">
                 <img id="model-1" src="../../img/2408-clp-rbr-cat-4x-XXXL-1-removebg.png" alt="red bull racing shirt models">
             </div>
         </section>
     </header>
-    <main>
+    <main id="main">
         <section id="categories">
             <a href="">Roupas &nbsp;<i class="fa-solid fa-shirt"></i></a>
             <a href="">Calçados &nbsp;<i class="fa-solid fa-shoe-prints"></i></a>
@@ -46,11 +46,13 @@
         </section>
 
         <section id="discounts-text">
-            <i class="fa-solid fa-clock" style="color: #ffffff; margin-left: 15px;"></i> <h4 id=""> &nbsp; OFERTAS RELÂMPAGO </h4>
+            <i class="fa-solid fa-clock" style="color: #ffffff;"><span id=""> &nbsp; OFERTAS RELÂMPAGO </span></i>
+            <span id="expiration-date"> OFERTA VÁLIDA POR: 11H: 33M</span>
         </section>
 
         <section id="discounts-products">
-            <div class="product-card">
+            <div class="product-discount-card">
+                <i class="fa-solid fa-clock fa-2xl" style="color: #001d46; position: absolute; margin-left: 15px; margin-top: 30px;"></i>
                 <img class="product-img" src="../../img/shirt.webp">
                 <div class="discount">
                     <span class="span-discount">-33% OFF</span>
@@ -62,46 +64,174 @@
                     <span class="price-options">Ou 5x de R$24,99</span>
                 </div>
             </div>
-            <div class="product-card">
-                <img class="product-img" src="../../img/shirt.webp">
+            <div class="product-discount-card">
+                <i class="fa-solid fa-clock fa-2xl" style="color: #001d46; position: absolute; margin-left: 15px; margin-top: 30px;"></i>
+                <img class="product-img" src="../../img/shirt2.webp">
                 <div class="discount">
                     <span class="span-discount">-33% OFF</span>
                 </div>
                 <div class="card-body">
-                    <span class="product-name">Camiseta Red Bull Racing Preta</span>
+                    <span class="product-name">White Red Bull Racing Shirt</span>
                     <del>R$199,90</del><br>
                     <span class="product-discount-price">R$99,00</span>
                     <span class="price-options">Ou 5x de R$24,99</span>
                 </div>
             </div>
-            <div class="product-card">
-                <img class="product-img" src="../../img/shirt.webp">
+            <div class="product-discount-card">
+                <i class="fa-solid fa-clock fa-2xl" style="color: #001d46; position: absolute; margin-left: 15px; margin-top: 30px;"></i>
+                <img class="product-img" src="../../img/miniature.jpg">
                 <div class="discount">
-                    <span class="span-discount">-33% OFF</span>
+                    <span class="span-discount">-11% OFF</span>
                 </div>
                 <div class="card-body">
-                    <span class="product-name">Camiseta Red Bull Racing Preta</span>
+                    <span class="product-name">RB20 Miniatura - 2024</span>
                     <del>R$199,90</del><br>
                     <span class="product-discount-price">R$99,00</span>
                     <span class="price-options">Ou 5x de R$24,99</span>
                 </div>
             </div>
-            <div class="product-card">
-                <img class="product-img" src="../../img/shirt.webp">
+            <div class="product-discount-card">
+                <i class="fa-solid fa-clock fa-2xl" style="color: #001d46; position: absolute; margin-left: 15px; margin-top: 30px;"></i>
+                <img class="product-img" src="../../img/shoes.avif">
                 <div class="discount">
                     <span class="span-discount">-33% OFF</span>
                 </div>
                 <div class="card-body">
-                    <span class="product-name">Camiseta Red Bull Racing Preta</span>
+                    <span class="product-name">Tênis Max Verstappen Collection</span>
                     <del>R$199,90</del><br>
                     <span class="product-discount-price">R$99,00</span>
+                    <span class="price-options">Ou 5x de R$24,99</span>
+                </div>
+            </div>
+        </section>
+        <section id="text-releases">
+            <h2>
+                Lançamentos
+            </h2>
+        </section>
+        <section id="releases">
+            <div class="product-card">
+                <img class="product-img" src="../../img/cap.webp">
+                <div class="card-body">
+                    <span class="product-name">RB20 Miniatura - 2024</span>
+                    <span class="product-price">R$99,00</span>
+                    <span class="price-options">Ou 5x de R$24,99</span>
+                </div>
+            </div>
+            <div class="product-card">
+                <img class="product-img" src="../../img/shirt2.webp">
+                <div class="card-body">
+                    <span class="product-name">RB20 Miniatura - 2024</span>
+                    <span class="product-price">R$99,00</span>
+                    <span class="price-options">Ou 5x de R$24,99</span>
+                </div>
+            </div>
+            <div class="product-card">
+                <img class="product-img" src="../../img/shirt2.webp">
+                <div class="card-body">
+                    <span class="product-name">RB20 Miniatura - 2024</span>
+                    <span class="product-price">R$99,00</span>
+                    <span class="price-options">Ou 5x de R$24,99</span>
+                </div>
+            </div>
+            <div class="product-card">
+                <img class="product-img" src="../../img/shirt2.webp">
+                <div class="card-body">
+                    <span class="product-name">RB20 Miniatura - 2024</span>
+                    <span class="product-price">R$99,00</span>
+                    <span class="price-options">Ou 5x de R$24,99</span>
+                </div>
+            </div>
+            <div class="product-card">
+                <img class="product-img" src="../../img/shirt2.webp">
+                <div class="card-body">
+                    <span class="product-name">RB20 Miniatura - 2024</span>
+                    <span class="product-price">R$99,00</span>
+                    <span class="price-options">Ou 5x de R$24,99</span>
+                </div>
+            </div>
+            <div class="product-card">
+                <img class="product-img" src="../../img/shirt2.webp">
+                <div class="card-body">
+                    <span class="product-name">RB20 Miniatura - 2024</span>
+                    <span class="product-price">R$99,00</span>
+                    <span class="price-options">Ou 5x de R$24,99</span>
+                </div>
+            </div>
+            <div class="product-card">
+                <img class="product-img" src="../../img/shirt2.webp">
+                <div class="card-body">
+                    <span class="product-name">RB20 Miniatura - 2024</span>
+                    <span class="product-price">R$99,00</span>
+                    <span class="price-options">Ou 5x de R$24,99</span>
+                </div>
+            </div>
+            <div class="product-card">
+                <img class="product-img" src="../../img/shirt2.webp">
+                <div class="card-body">
+                    <span class="product-name">RB20 Miniatura - 2024</span>
+                    <span class="product-price">R$99,00</span>
                     <span class="price-options">Ou 5x de R$24,99</span>
                 </div>
             </div>
         </section>
     </main>
     <footer>
-
+        <section id="advantages">
+            <ul id="footer-ul">
+                <li class="footer-li">
+                    <i class="fa-solid fa-truck fa-2xl" style="color: #fff;"></i> &nbsp;
+                    <p>
+                        <span class="advantages-title"> Frete Grátis</span><br>
+                        <span> Entrega para Todo Brasil</span>
+                    </p>
+                </li>
+                <li class="footer-li">
+                    <i class="fa-regular fa-clock fa-2xl" style="color: #ffffff;"></i>
+                    <p>
+                        <span class="advantages-title"> Entrega Expressa </span><br>
+                        <span> Máximo de 2 dias úteis </span>
+                    </p>
+                </li>
+                <li class="footer-li">
+                    <i class="fa-regular fa-credit-card fa-2xl" style="color: #ffffff;"></i>
+                    <p>
+                        <span class="advantages-title"> Até 10x Sem Juros </span><br>
+                        <span> Para Compras acima de R$99,90 </span>
+                    </p>
+                </li>
+            </ul>
+        </section>
+        <section id="footer-information">
+            <ul class="information-ul">
+                <li class="info-item"><span id="rbr">RBR</span><span id="store">Store</span></li>
+                <li class="info-item"><span id="info-description">Somos apaixonados pela Red Bull Racing e por uma vida estilosa e buscamos transmitir isso por nossos produtos</span></li>
+            </ul>
+            <ul class="information-ul">
+                <li class="info-item"><a href="AAA">Teste</a></li>
+                <li class="info-item"><a href="AAA"></a>Vamos</li>
+                <li class="info-item"><a href="AAA"></a>Vamos</li>
+                <li class="info-item"><a href="AAA"></a>Vamos</li>
+                <li class="info-item"><a href="AAA"></a>Vamos</li>
+                <li class="info-item"><a href="AAA"></a>Vamos</li>
+            </ul>
+            <ul class="information-ul">
+                <li class="info-item"><a href="AAA">Teste</a></li>
+                <li class="info-item"><a href="AAA"></a>Vamos</li>
+                <li class="info-item"><a href="AAA"></a>Vamos</li>
+                <li class="info-item"><a href="AAA"></a>Vamos</li>
+                <li class="info-item"><a href="AAA"></a>Vamos</li>
+                <li class="info-item"><a href="AAA"></a>Vamos</li>
+            </ul>
+            <ul class="information-ul">
+                <li class="info-item"><a href="AAA">Teste</a></li>
+                <li class="info-item"><a href="AAA"></a>Vamos</li>
+                <li class="info-item"><a href="AAA"></a>Vamos</li>
+                <li class="info-item"><a href="AAA"></a>Vamos</li>
+                <li class="info-item"><a href="AAA"></a>Vamos</li>
+                <li class="info-item"><a href="AAA"></a>Vamos</li>
+            </ul>
+        </section>
     </footer>
     <script src="https://kit.fontawesome.com/15c8bda6b4.js" crossorigin="anonymous"></script>
 </body>
