--- a/view/css/furniture.css
+++ b/view/css/furniture.css
@@ -1,6 +1,7 @@
 * {
     margin: 0;
-    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    scroll-behavior: smooth;
 }
 
 header {
@@ -12,7 +13,7 @@ header {
 }
 
 #header-menu {
-    height: 100px;
+    height: 80px;
     color: white;
     display: flex;
     align-items: center;
@@ -20,6 +21,7 @@ header {
     padding-right: 2rem;
     padding-left: 2rem;
     font-weight: bold;
+    background-color: #001D46;
 }
 
 #main-item {
@@ -34,8 +36,11 @@ header {
     font-size: 42px;
 }
 
-.navbar-ul {
+ul {
     list-style: none;
+}
+
+.navbar-ul {
     display: flex;
     padding: 0;
     align-items: center;
@@ -67,7 +72,7 @@ header {
 }
 
 #header-section {
-    height: calc(100vh - 100px);
+    height: calc(100vh - 80px);
     display: flex;
     overflow: hidden;
 }
@@ -117,7 +122,7 @@ h5 {
 }
 
 
-main {
+#main {
     background-color: white;
     padding: 50px;
 }
@@ -125,8 +130,9 @@ main {
 #categories {
     background-color: #001D46;
     display: flex;
-    height: 60px;
+    height: 80px;
     align-items: center;
+    border-radius: 5px;
 }
 
 #categories a {
@@ -149,10 +155,13 @@ main {
     background-color: #001D46;
     padding: 10px;
     display: flex;
+    justify-content: space-between;
+    border-radius: 5px;
 }
 
-#discounts-text h4 {
-    color: white
+#discounts-text span {
+    color: white;
+    font-weight: bold;
 }
 
 #discounts-products {
@@ -161,14 +170,17 @@ main {
     justify-content: space-between;
 }
 
-.product-card {
+.product-discount-card {
     border-radius: 5px;
     width: 23%;
     box-shadow: 0 4px 8px 0 rgba(0, 29, 70, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    height: 500px
 }
 
 .product-img {
     width: 100%;
+    height: 60%;
+    object-fit:contain;
 }
 
 .discount {
@@ -182,7 +194,7 @@ main {
     text-align: center;
     display: flex;
     justify-content: center;
-    padding: 5px
+    padding: 5px;
 }
 
 .card-body {
@@ -207,5 +219,85 @@ main {
     font-size: 15px
 }
 
+#text-releases {
+    margin-top: 80px;
+}
 
+#releases {
+    margin-top: 50px;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+
+#text-releases h2 {
+    font-weight: bold;
+    font-size: 2rem;
+}
+
+.product-card {
+    border-radius: 5px;
+    width: 23%;
+    box-shadow: 0 4px 8px 0 rgba(0, 29, 70, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    height: 400px;
+    margin-bottom: 20px;
+}
+
+.product-price {
+    font-weight: bold;
+    font-size: 1.5rem;
+    display: flex;
+}
+
+footer {
+    background-color: #001D46;
+    bottom: 0px;
+}
+
+#advantages {
+    color: white;
+    border-bottom: 1px solid white;
+    height: 80px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0 50px 50px 50px;
+}
+
+#footer-ul {
+    display: flex;
+    padding: 0;
+}
+
+.footer-li {
+    display: flex;
+    align-items: center;
+    margin: 50px;
+}
+
+.footer-li p {
+    margin-left: 10px;
+}
+
+.advantages-title {
+    font-weight: bold;
+    font-size: 1.5rem;
+}
+
+#footer-information {
+    display: flex;
+    justify-content: space-around;
+    margin: 0 50px;
+}
+
+.information-ul {
+    padding: 0;
+    color: white;
+    width: 25%;
+    text-align: center;
+}
+
+.info-item {
+    margin-bottom: 10px;;
+}
 
