--- a/view/css/furniture.css
+++ b/view/css/furniture.css
@@ -1,3 +1,7 @@
+:root {
+    --main-color: #011c37;
+}
+
 * {
     margin: 0;
     font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
@@ -5,11 +9,11 @@
 }
 
 header {
-    /* background-image: url(../../img/background3.jpg); */
+    background-image: url(../../img/aesthetic3.webp);
     height: 100vh;
     overflow: hidden;
     background-size: cover;
-    background-color: #001D46;
+    /* background-color: var(--main-color); */
 }
 
 #header-menu {
@@ -21,16 +25,18 @@ header {
     padding-right: 2rem;
     padding-left: 2rem;
     font-weight: bold;
-    background-color: #001D46;
+    /* background-color: var(--main-color); */
 }
 
 #main-item {
     font-size: 2rem;
 }
 #rbr {
-    color: red;
+    color: yellow;
     font-size: 42px;
+    font-weight: bold;
 }
+
 #store {
     color: yellow;
     font-size: 42px;
@@ -46,6 +52,23 @@ ul {
     align-items: center;
 }
 
+#search-form {
+    width: 700px;
+    height: 100%;
+    display: flex;
+    align-items: center;
+}
+
+#search-input {
+    width: 100%;
+    border-radius: 100px;
+    height: 40px;
+}
+
+::placeholder {
+    text-align: center;
+}
+
 .header-item {
     font-size: 1rem;
     margin: 10px;
@@ -55,20 +78,6 @@ ul {
     text-decoration: none;
     color: white;
     font-weight: bold;
-}
-
-.header-item button {
-    background-color: red;
-    border: 0;
-    border-radius: 20px;
-    font-size: 1rem;
-    color: white;
-    width: 60px;
-    font-weight: bold;
-    padding: 10px 50px;
-    display: flex;
-    justify-content: center;
-    white-space: nowrap;
 }
 
 #header-section {
@@ -82,7 +91,6 @@ ul {
     display: flex;
     overflow: hidden;
     height: 100%;
-    margin-left: 16px;
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
@@ -91,10 +99,15 @@ ul {
 h1 {
     color: white;
     font-size: 3rem;
+    text-align: center;
 }
 
 h5 {
     color: white;
+    text-align: center;
+    font-weight: bold;
+    font-size: 1rem;
+    padding: 32px;
 }
 
 #header-section-description a {
@@ -109,7 +122,8 @@ h5 {
 }
 
 #Red {
-    color: red
+    color: yellow;
+    font-weight: bold;
 }
 #Racing {
     color: yellow;
@@ -128,7 +142,7 @@ h5 {
 }
 
 #categories {
-    background-color: #001D46;
+    background-color: var(--main-color);
     display: flex;
     height: 80px;
     align-items: center;
@@ -152,7 +166,7 @@ h5 {
 
 #discounts-text {
     margin-top: 30px;
-    background-color: #001D46;
+    background-color: var(--main-color);
     padding: 10px;
     display: flex;
     justify-content: space-between;
@@ -174,18 +188,28 @@ h5 {
     border-radius: 5px;
     width: 23%;
     box-shadow: 0 4px 8px 0 rgba(0, 29, 70, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-    height: 500px
+    height: 500px;
+    overflow: hidden;
 }
 
 .product-img {
     width: 100%;
     height: 60%;
     object-fit:contain;
+    transition: all 0.3s ease-in-out;
+    z-index: -1;
+
+}
+
+.product-img:hover {
+    transform: scale(1.05);
+    z-index: -1;
 }
 
 .discount {
     width: 100%;
-    background-color: #001D46;
+    background-color: var(--main-color);
+    z-index: 1;
 }
 
 .span-discount {
@@ -241,6 +265,7 @@ h5 {
     box-shadow: 0 4px 8px 0 rgba(0, 29, 70, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     height: 400px;
     margin-bottom: 20px;
+    overflow: hidden;
 }
 
 .product-price {
@@ -249,8 +274,28 @@ h5 {
     display: flex;
 }
 
+#driver-collections {
+    display: flex;
+    margin-top: 50px;
+}
+
+.driver-div {
+    width: 50%;;
+    margin: 5px;
+}
+
+.driver-img {
+    width: 100%;
+    object-fit: cover;
+    transition: all .3s ease;
+}
+
+.driver-img:hover {    
+    transform: scale(1.02);
+}
+
 footer {
-    background-color: #001D46;
+    background-color: var(--main-color);
     bottom: 0px;
 }
 
@@ -297,7 +342,32 @@ footer {
     text-align: center;
 }
 
+.info-title {
+    color: white;
+    font-weight: bold;
+    font-size: 2rem;
+}
+
+#contact-ul {
+    display: flex;
+    padding: 0;
+    justify-content: center;
+}
+
 .info-item {
-    margin-bottom: 10px;;
+    margin: 15px;
+}
+
+.info-item a {
+    text-decoration: none;
+    color: white;
+    font-size: 15px;
+}
+
+#about {
+    background-color: black;
+    color: white;
+    padding: 10px 50px;
+    text-align: center;
 }
 
