--- a/view/F1Store/index.html
+++ b/view/F1Store/index.html
@@ -224,9 +224,23 @@
         <section id="footer-information">
             <ul class="information-ul">
                 <li class="info-title"><span id="rbr">RBR</span><span id="store">Store</span></li>
-                <li class="info-item"><span id="info-description">Somos apaixonados pela Red Bull Racing e por uma vida estilosa e buscamos transmitir isso por nossos produtos. </span></li>
+                <li class="info-item"><span id="info-description">Somos apaixonados pela Red Bull Racing e por uma vida estilosa e buscamos transmitir isso por meio dos nossos produtos. </span></li>
             </ul>
             <ul class="information-ul">
+                <li class="info-title">Ajuda</li>
+                <li class="info-item"><a href="AAA">Trocas e Devoluções</a></li>
+                <li class="info-item"><a href="AAA">Pagamentos</a></li>
+                <li class="info-item"><a href="AAA">Cancelamentos</a></li>
+                <li class="info-item"><a href="AAA"></a></li>
+            </ul>
+            <ul class="information-ul">
+                <li class="info-title">Receba nossas ofertas no E-mail</li>
+                <form id="footer-form">    
+                    <input class="email-input" type="email" placeholder="Seu melhor e-mail aqui">
+                    <button id="submit-email" type="submit"><i class="fa-solid fa-arrow-right fa-lg" style="color: #ffffff;"></i></button>
+                </form>
+            </ul>
+                        <ul class="information-ul">
                 <li class="info-title">Contato</li>
                 <ul id="contact-ul">
                     <li class="info-item"><a href="AAA"><i class="fa-brands fa-instagram fa-xl" style="color: #ffffff;"></i></a></li>
@@ -234,27 +248,8 @@
                     <li class="info-item"><a href="AAA"><i class="fa-solid fa-mobile-screen fa-xl" style="color: #ffffff;"></i> </a></li>
                     <li class="info-item"><a href="AAA"><i class="fa-regular fa-envelope fa-2xl" style="color: #ffffff;"></i></a></li>         
                 </ul>
-                <form>
-                    
-                    <input type="text" placeholder="E-mail">
-                </form>
             </ul>
-            <ul class="information-ul">
-                <li class="info-title">Ajuda</li>
-                <li class="info-item"><a href="AAA">Trocas e Devoluções</a></li>
-                <li class="info-item"><a href="AAA">Entregas</a></li>
-                <li class="info-item"><a href="AAA">Pagamentos</a></li>
-                <li class="info-item"><a href="AAA">Cancelamentos</a></li>
-                <li class="info-item"><a href="AAA"></a></li>
-            </ul>
-            <ul class="information-ul">
-                <li class="info-title">Receba nossas ofertas no E-mail</li>
-                <li class="info-item"><a href="AAA"></a>Vamos</li>
-                <li class="info-item"><a href="AAA"></a>Vamos</li>
-                <li class="info-item"><a href="AAA"></a>Vamos</li>
-                <li class="info-item"><a href="AAA"></a>Vamos</li>
-                <li class="info-item"><a href="AAA"></a>Vamos</li>
-            </ul>
+
         </section>
         <section id="about">
             <h4>&copy; 2025 - Gustavo Santos Schneider</h4>
