--- a/view/css/login.css
+++ b/view/css/login.css
@@ -1,3 +1,169 @@
-body {
-    background-image: url(../../videos/Redbull\ F1\ team\ Edit.mp4);
+:root {
+    --main-color: #00322c;
+    --icon-color: black;
+}
+
+* {
+    margin: 0;
+    font-family: Arial, Helvetica, sans-serif;
+    box-sizing: border-box;
+}
+
+header {
+    /* background-image: url(../../img/aesthetic3.webp); */
+    /* background-color: var(--main-color); */
+}
+
+#header-menu {
+    height: 80px;
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding-right: 2rem;
+    padding-left: 2rem;
+    font-weight: bold;
+    background-color: var(--main-color);
+}
+
+#main-item {
+    font-size: 2rem;
+}
+#rbr {
+    color: yellow;
+    font-size: 42px;
+    font-weight: bold;
+}
+
+#store {
+    color: yellow;
+    font-size: 42px;
+}
+
+ul {
+    list-style: none;
+}
+
+.navbar-ul {
+    display: flex;
+    padding: 0;
+    align-items: center;
+}
+
+#search-form {
+    width: 600px;
+    height: 100%;
+    display: flex;
+    align-items: center;
+}
+
+#search-input {
+    width: 100%;
+    border-radius: 100px;
+    height: 40px;
+    border: solid transparent;
+    padding: 0px 10px;
+}
+
+#search-input::placeholder {
+    text-align: center;
+}
+
+#search-input:focus {
+    outline: none;
+}
+
+.header-item {
+    font-size: 1rem;
+    margin: 10px;
+}
+
+.header-item:hover {
+    border-bottom: 3px solid var(--main-color);
+}
+
+.header-item a {
+    text-decoration: none;
+    color: white;
+    font-weight: bold;
+}
+
+main {
+    padding: 50px;
+    height: 100%;
+}
+
+.form-section {
+    background-color: var(--main-color);
+    width: 100%;
+    display: flex;
+    height: 76vh;
+    box-shadow: 0 4px 8px 0 rgba(0, 29, 70, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+.half {
+    height: 100%;
+}
+
+#halfOne {
+    width: 65%;
+    background-color: var(--main-color);
+    
+}
+
+#halfTwo {
+    width: 35%;
+    background-color: #fff;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 50px;;
+}
+
+#halfTwo h1 {
+    color: var(--main-color);
+    font-size: 2rem;
+}
+
+.login-ul {
+    padding: 0;
+    display: flex;
+    margin-bottom: 100px;
+}
+
+.icon-li {
+    margin: 15px;
+}
+
+label {
+    color: black;
+    font-weight: bold;
+    margin-left: 15px;
+    font-size: 1rem;
+}
+
+i {
+    color: var(--icon-color);
+}
+
+#login-form {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+}
+
+.login-form-input {
+    background-color: #e2e2e2;
+    padding: 10px;
+    font-family: 'Helvetica', FontAwesome, sans-serif;
+    color: black;
+    margin: 15px;
+    border: none;
+}
+
+
+.login-form-input:focus {
+    outline: none;
+    padding: 10px;
 }
