--- a/view/css/furniture.css
+++ b/view/css/furniture.css
@@ -1,19 +1,19 @@
 :root {
-    --main-color: #011c37;
+    --main-color: #00322c;
 }
 
 * {
     margin: 0;
-    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
     scroll-behavior: smooth;
 }
 
 header {
-    background-image: url(../../img/aesthetic3.webp);
+    /* background-image: url(../../img/aesthetic3.webp); */
     height: 100vh;
     overflow: hidden;
     background-size: cover;
-    /* background-color: var(--main-color); */
+    background-color: var(--main-color);
 }
 
 #header-menu {
@@ -53,7 +53,7 @@ ul {
 }
 
 #search-form {
-    width: 700px;
+    width: 600px;
     height: 100%;
     display: flex;
     align-items: center;
@@ -63,15 +63,25 @@ ul {
     width: 100%;
     border-radius: 100px;
     height: 40px;
+    border: solid transparent;
+    padding: 0px 10px;
 }
 
-::placeholder {
+#search-input::placeholder {
     text-align: center;
+}
+
+#search-input:focus {
+    outline: none;
 }
 
 .header-item {
     font-size: 1rem;
     margin: 10px;
+}
+
+.header-item:hover {
+    border-bottom: 3px solid var(--main-color);
 }
 
 .header-item a {
@@ -306,7 +316,6 @@ footer {
     display: flex;
     justify-content: center;
     align-items: center;
-    margin: 0 50px 50px 50px;
 }
 
 #footer-ul {
@@ -332,7 +341,7 @@ footer {
 #footer-information {
     display: flex;
     justify-content: space-around;
-    margin: 0 50px;
+    margin: 50px;
 }
 
 .information-ul {
@@ -371,3 +380,32 @@ footer {
     text-align: center;
 }
 
+#footer-form {
+    border-bottom: 2px solid white;
+    display: flex;
+    margin-top: 15px;
+}
+
+.email-input {
+    /* border-radius: 50px; */
+    width: 100%;
+    padding: 15px 5px;
+    border: none;
+    background-color: transparent;
+    color: white;
+}
+
+.email-input::placeholder {
+    color: white;
+}
+
+.email-input:focus {
+    outline: none;
+    color: white;
+}
+
+#submit-email {
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+}
