--- a/view/F1Store/login.html
+++ b/view/F1Store/login.html
@@ -50,7 +50,7 @@
                     <input class="login-form-input" id="password" name="password" type="password" placeholder="&#xf084; Senha">
                     <label for="remember">
                         <input name="remember" id="remember" type="checkbox">
-                         Mantenha-me conectado
+                        <span style="margin-left: 10px;">Mantenha-me conectado<span>
                     </label>
                 </form>
             </div>
