--- a/view/css/login.css
+++ b/view/css/login.css
@@ -140,7 +140,9 @@ label {
     color: black;
     font-weight: bold;
     margin-left: 15px;
-    font-size: 1rem;
+    font-size: 15px;
+    display: flex;
+    align-items: center;
 }
 
 i {
@@ -155,7 +157,7 @@ i {
 
 .login-form-input {
     background-color: #e2e2e2;
-    padding: 10px;
+    padding: 15px;
     font-family: 'Helvetica', FontAwesome, sans-serif;
     color: black;
     margin: 15px;
